address and checkout changes
Signed-off-by: karan jamwal <stdev.net@gmail.com>

--- a/src/app/components/layout/app-footer/app-footer.component.html
+++ b/src/app/components/layout/app-footer/app-footer.component.html
@@ -28,9 +28,9 @@
                     <h4>Follow Us</h4>
                     <p class="link-wink">@winknaturals</p>
                     <ul class="social-ico">
-                        <li><a href="https://www.facebook.com/winknaturals"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="https://www.instagram.com/winknaturals"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                        <li><a href="https://www.facebook.com/winknaturals" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.instagram.com/winknaturals" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://www.pinterest.com/winknaturals" target="_blank"><i class="fab fa-pinterest-p" ></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -50,12 +50,8 @@
                 <p class="copyright">© 2021 Wink Naturals All rights reserved</p>
                 <ul class="bottom-footer-links">
                     <li><a href="https://s3-us-west-2.amazonaws.com/seller-assets/Compensation+Plan/Graphics/Member+Policy+Manual.pdf" target="_blank">Terms & Conditions</a></li>
-                    <li>
-                        <ul>
-                            <li><a href="https://s3-us-west-2.amazonaws.com/seller-assets/Compensation+Plan/Graphics/Compensation+Plan+Overview.pdf" target="_blank">Compensation Plan <br>Usage Policy</a></li>
-
-                        </ul>
-                    </li>
+                    <li><a href="https://s3-us-west-2.amazonaws.com/seller-assets/Compensation+Plan/Graphics/Compensation+Plan+Overview.pdf" target="_blank">Compensation Plan</a></li> 
+                    <li><a href="https://winknaturals.com/www/home/usagepolicy" target="_blank">Usage Policy</a></li>
                 </ul>
             </div>
         </div>
