--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
@@ -23,3 +23,136 @@ span.arrow-stepp {
 div#refered-sidebar {
     padding: 20px;
 }
+
+.method-shipp ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.method-shipp ul li {
+    margin-bottom: 20px;
+}
+
+.method-shipp ul li .custom-control {
+    padding-left: 30px;
+}
+
+.method-shipp ul li label .shipping-list-item h4 {
+    font-size: 20px;
+    font-family: 'g-demibold';
+    color: #1CC584;
+    margin: 0 0 3px 0;
+}
+
+.method-shipp ul li label .shipping-list-item p {
+    margin: 0;
+    color: rgba(0 0 0/0.8);
+    font-size: 14px;
+}
+
+.method-shipp ul li .custom-control input {
+    top: 5px;
+    left: 5px;
+}
+
+.method-shipp ul li label:after {
+    background-color: #ffffff;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    left: -22px;
+    top: 9px;
+}
+
+.method-shipp ul li label:before {
+    border: 2px solid #747474;
+    left: -25px;
+    top: 6px;
+}
+
+.method-shipp ul li input:checked~.custom-control-label::after {
+    background-color: #1CB1C5;
+    background-image: none !important;
+}
+
+.method-shipp ul li input:checked~.custom-control-label::before {
+    background-color: #fff;
+    border-color: #1CB1C5;
+}
+
+.method-cardselect ul {
+    padding: 0 15px;
+    list-style-type: none;
+}
+
+.table-today-order {
+    max-width: 240px;
+    margin: 0 auto;
+}
+
+.table-today-order table {
+    width: 100%;
+}
+
+.table-today-order tbody tr td {
+    font-size: 16px;
+    font-family: 'g-medium';
+    color: rgba(0 0 0/0.7);
+    padding: 2px 5px;
+}
+
+.table-today-order table tbody tr td:last-child,
+.table-today-order tfoot tr td:last-child {
+    text-align: right;
+}
+
+.table-today-order table tfoot tr:first-child td p {
+    padding-top: 20px;
+    margin-bottom: 0px;
+}
+
+.table-today-order tfoot tr:first-child {
+    border-top: 1px solid rgb(230 230 230);
+}
+
+.table-today-order tbody tr:last-child td {
+    padding-bottom: 15px;
+}
+
+form.newaddr-infoo input {
+    height: 45px;
+}
+
+p.you-sav {
+    color: #1CC584;
+    font-size: 20px;
+    font-family: 'g-medium';
+}
+
+p.you-pay {
+    color: #1CC584;
+    font-size: 18px;
+    font-family: 'g-medium';
+    color: rgba(0 0 0/0.7);
+    margin: 0;
+}
+
+.saveprocessed {
+    width: 100%;
+    float: left;
+    text-align: center;
+}
+
+.saveprocessed button {
+    width: 100%;
+    max-width: 280px;
+    margin: 0 auto;
+    background-color: #1cb1c5;
+    border-radius: 40px;
+    padding: 10px 10px;
+    font-family: 'g-demibold';
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 15px;
+    border: 1px solid #1cb1c5;
+}
