--- a/src/app/components/store/checkout/checkout.component.scss
+++ b/src/app/components/store/checkout/checkout.component.scss
@@ -2,6 +2,7 @@ section.backlink-header {
     width: 100%;
     padding: 30px 0 0;
 }
+
 section.backlink-header .back-link a {
     display: flex;
     align-items: center;
@@ -10,26 +11,30 @@ section.backlink-header .back-link a {
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
 section.backlink-header .back-link a svg {
     width: 7px;
     margin-right: 4px;
 }
+
 #promo-code .special-field.datafilled {
     width: 100%;
     max-width: 100%;
 }
+
 .referrer_modal button.close {
     position: absolute;
     right: 11px;
     top: 4px;
     z-index: 3;
 }
+
 .referrer_modal button.close span {
     font-size: 45px;
     line-height: 28px;
 }
-.grid-box-shadow
-{
+
+.grid-box-shadow {
     background-color: #fff;
     padding: 20px;
     box-shadow: 0px 0px 4px rgb(212 212 212);
@@ -37,43 +42,55 @@ section.backlink-header .back-link a svg {
     width: 100%;
     float: left;
 }
+
 .shipping-address-form input {
     height: 50px;
     font-family: 'g-medium';
     font-size: 16px;
     color: rgba(0 0 0/0.8);
 }
+
 .shipping-address-form input::placeholder {
     color: rgba(0 0 0/0.6);
 }
+
 .shipping-address-form input:focus {
     box-shadow: none;
     outline: none;
     border: 1px solid #1cb1c5;
 }
+
 .method-shipp ul {
     padding: 0;
     list-style-type: none;
 }
-.method-shipp ul li {margin-bottom: 20px;}
+
+.method-shipp ul li {
+    margin-bottom: 20px;
+}
+
 .method-shipp ul li .custom-control {
     padding-left: 30px;
 }
+
 .method-shipp ul li label .shipping-list-item h4 {
     font-size: 20px;
     font-family: 'g-demibold';
     color: #1CC584;
     margin: 0 0 3px 0;
 }
+
 .method-shipp ul li label .shipping-list-item p {
     margin: 0;
     color: rgba(0 0 0/0.8);
     font-size: 14px;
 }
+
 .method-shipp ul li .custom-control input {
     top: 5px;
     left: 5px;
 }
+
 .method-shipp ul li label:after {
     background-color: #ffffff;
     border-radius: 50%;
@@ -82,39 +99,54 @@ section.backlink-header .back-link a svg {
     left: -22px;
     top: 9px;
 }
+
 .method-shipp ul li label:before {
     border: 2px solid #747474;
     left: -25px;
     top: 6px;
 }
+
 .method-shipp ul li input:checked~.custom-control-label::after {
     background-color: #1CB1C5;
     background-image: none !important;
 }
-.method-shipp ul li input:checked~.custom-control-label::before {background-color: #fff;border-color: #1CB1C5;}
+
+.method-shipp ul li input:checked~.custom-control-label::before {
+    background-color: #fff;
+    border-color: #1CB1C5;
+}
+
 .method-cardselect ul {
     padding: 0 15px;
     list-style-type: none;
 }
-.method-cardselect ul li {margin-bottom: 20px;}
+
+.method-cardselect ul li {
+    margin-bottom: 20px;
+}
+
 .method-cardselect ul li .custom-control {
     padding-left: 15px;
 }
+
 .method-cardselect ul.select-paycard {
     margin-bottom: 0px;
 }
+
 .method-cardselect ul.select-paycard h4 {
     font-size: 18px;
     font-family: 'g-demibold';
     color: #000;
     margin: 0 0 3px 0;
 }
+
 .method-cardselect ul.select-paycard .card-info p {
     margin: 0;
     color: rgba(0 0 0/0.8);
     font-size: 12px;
     font-family: 'g-medium';
 }
+
 .method-cardselect ul h4 a.edit-cardopt {
     font-size: 12px;
     font-family: 'g-demibold';
@@ -123,20 +155,24 @@ section.backlink-header .back-link a svg {
     text-transform: uppercase;
     text-decoration: underline;
 }
+
 .method-cardselect ul.select-paycard li:not(:first-child) {
     border-top: 1px solid #e6e6e6;
     padding-top: 20px;
     margin-bottom: 0px !important;
 }
+
 .method-cardselect ul li label .cardselecting-list-item .card-info p {
     margin: 0;
     color: rgba(0 0 0/0.8);
     font-size: 14px;
 }
+
 .method-cardselect ul li .custom-control input {
     top: 5px;
     left: 5px;
 }
+
 .method-cardselect ul li label:after {
     background-color: #ffffff;
     border-radius: 50%;
@@ -145,20 +181,28 @@ section.backlink-header .back-link a svg {
     left: -22px;
     top: 9px;
 }
+
 .method-cardselect ul li label:before {
     border: 2px solid #747474;
     left: -25px;
     top: 6px;
 }
+
 .method-cardselect ul li input:checked~.custom-control-label::after {
     background-color: #1CB1C5;
     background-image: none !important;
 }
-.method-cardselect ul li input:checked~.custom-control-label::before {background-color: #fff;border-color: #1CB1C5;}
+
+.method-cardselect ul li input:checked~.custom-control-label::before {
+    background-color: #fff;
+    border-color: #1CB1C5;
+}
+
 .cta-continue {
     text-align: center;
     margin: 30px 0 0px;
 }
+
 .cta-continue button.btn-continue {
     width: 100%;
     max-width: 260px;
@@ -171,27 +215,30 @@ section.backlink-header .back-link a svg {
     text-transform: uppercase;
     font-size: 15px;
 }
+
 .steps-inner.promo-checkout .form-group,
-.loyalty-form .form-group
-{
+.loyalty-form .form-group {
     position: relative;
 }
+
 .steps-inner.promo-checkout .form-group input,
-.loyalty-form .form-group input
- {
+.loyalty-form .form-group input {
     height: 45px;
 }
+
 .steps-inner.promo-checkout .form-group span.btn-add-promo,
-.loyalty-form .form-group span.btn-add-promo
-{
+.loyalty-form .form-group span.btn-add-promo {
     position: absolute;
     top: 12px;
     right: 20px;
     cursor: pointer;
 }
+
 .steps-inner.promo-checkout .form-group span.btn-add-promo svg,
-.loyalty-form .form-group span.btn-add-promo svg
- {fill: rgba(0 0 0/0.5);}
+.loyalty-form .form-group span.btn-add-promo svg {
+    fill: rgba(0 0 0/0.5);
+}
+
 span.vali-promo {
     margin: 5px 0 0px 0;
     display: block;
@@ -199,19 +246,23 @@ span.vali-promo {
     font-size: 14px;
     color: rgba(0 0 0/0.7);
 }
+
 .loyalty-desc {
     margin-bottom: 13px;
     position: relative;
 }
+
 .loya-conver {
     position: absolute;
     right: 0;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
+
 span.loyal-conv-modal {
     cursor: pointer;
 }
+
 .final-cta-bottom .verified-batch {
     max-width: 245px;
     display: flex;
@@ -219,13 +270,16 @@ span.loyal-conv-modal {
     align-items: center;
     margin: 20px auto 0;
 }
+
 .final-cta-bottom {
     text-align: center;
     padding: 20px 0;
 }
+
 .final-cta-bottom .plce-order-cta {
     margin: 0px 0 10px 0;
 }
+
 .plce-order-cta button {
     width: 100%;
     max-width: 320px;
@@ -239,39 +293,55 @@ span.loyal-conv-modal {
     font-size: 18px;
     border: 1px solid #1cb1c5;
 }
+
 .final-cta-bottom .verified-batch span.batch-text {
     margin-left: 11px;
 }
+
 .table-today-order {
     max-width: 240px;
     margin: 0 auto;
 }
+
 .table-today-order table {
     width: 100%;
 }
+
 .table-today-order tbody tr td {
     font-size: 16px;
     font-family: 'g-medium';
     color: rgba(0 0 0/0.7);
     padding: 2px 5px;
 }
-.table-today-order table tbody tr td:last-child,.table-today-order tfoot tr td:last-child {text-align: right;}
+
+.table-today-order table tbody tr td:last-child,
+.table-today-order tfoot tr td:last-child {
+    text-align: right;
+}
+
 .table-today-order table tfoot tr:first-child td p {
     padding-top: 20px;
     margin-bottom: 0px;
 }
+
 .table-today-order tfoot tr:first-child {
     border-top: 1px solid rgb(230 230 230);
 }
-.table-today-order tbody tr:last-child td {padding-bottom: 15px;}
+
+.table-today-order tbody tr:last-child td {
+    padding-bottom: 15px;
+}
+
 form.newaddr-infoo input {
     height: 45px;
 }
+
 p.you-sav {
     color: #1CC584;
     font-size: 20px;
     font-family: 'g-medium';
 }
+
 p.you-pay {
     color: #1CC584;
     font-size: 18px;
@@ -279,69 +349,78 @@ p.you-pay {
     color: rgba(0 0 0/0.7);
     margin: 0;
 }
+
 .steps-inner.otp-data-sidebar table,
 .steps-inner.subsc-purchse-sidebar table,
-.steps-inner.today-order table
-{
+.steps-inner.today-order table {
     margin: 0 auto;
     width: 100%;
 }
+
 .steps-inner.otp-data-sidebar table tbody tr td,
 .steps-inner.subsc-purchse-sidebar table tbody tr td,
-.steps-inner.today-order table tbody tr td
-{
+.steps-inner.today-order table tbody tr td {
     font-size: 18px;
-    font-family:'g-medium';
+    font-family: 'g-medium';
     color: rgba(0 0 0/0.7);
 }
+
 .steps-inner.otp-data-sidebar table tfoot tr td,
 .steps-inner.subsc-purchse-sidebar table tfoot tr td,
-.steps-inner.today-order table tfoot tr td
-{
+.steps-inner.today-order table tfoot tr td {
     font-size: 18px;
-    font-family:'g-medium';
+    font-family: 'g-medium';
     color: rgba(0 0 0/0.7);
 }
+
 .steps-inner.otp-data-sidebar table tfoot tr:first-child td,
 .steps-inner.subsc-purchse-sidebar table tfoot tr:first-child td,
-.steps-inner.today-order table tfoot tr:first-child td
-{
+.steps-inner.today-order table tfoot tr:first-child td {
     border-top: 1px solid #e6e6e6;
     padding-top: 8px;
 }
+
 .steps-inner.otp-data-sidebar table tbody tr:last-child td,
 .steps-inner.subsc-purchse-sidebar table tbody tr:last-child td,
-.steps-inner.today-order table tbody tr:last-child td
-{
+.steps-inner.today-order table tbody tr:last-child td {
     padding-bottom: 8px;
 }
+
 div#otp-sidebar-header,
-div#subsc-purchse
-{
+div#subsc-purchse {
     border-bottom: none;
 }
+
 .search-bar-on .form-group {
     position: relative;
 }
+
 .search-bar-on .form-group span.search {
     position: absolute;
     top: 4px;
     right: 10px;
 }
-.search-bar-on .form-group span.search svg {width: 14px;}
+
+.search-bar-on .form-group span.search svg {
+    width: 14px;
+}
+
 ul.conv-products.mk-primary {
     list-style: none;
     padding: 0;
 }
+
 ul.conv-products.mk-primary label.custom-control-label {
     font-family: 'g-demibold';
     font-size: 16px;
 }
+
 .saveprocessed {
     width: 100%;
     float: left;
     text-align: center;
 }
+
 .saveprocessed button {
     width: 100%;
     max-width: 280px;
@@ -355,181 +434,225 @@ ul.conv-products.mk-primary label.custom-control-label {
     font-size: 15px;
     border: 1px solid #1cb1c5;
 }
-.grid-checkout .cart-sidebar .sidebar-head .title{
+
+.grid-checkout .cart-sidebar .sidebar-head .title {
     color: #1cb1c5;
 }
+
 .grid-checkout .toggle-sidebar .sidebar-head span.arrow-down {
     top: -3px;
 }
+
 .steps-inner.promo-checkout .promo-code .special-field {
     max-width: 100%;
 }
-.steps-inner.promo-checkout .form-group span.btn-add-promo{
+
+.steps-inner.promo-checkout .form-group span.btn-add-promo {
     top: 7px;
 }
-.steps-inner.promo-checkout .special-field.dataempty label{
+
+.steps-inner.promo-checkout .special-field.dataempty label {
     top: 11px;
 }
+
+
 /*--------------------
 SHARED VARIABLES
 --------------------*/
+
 $red: #E91E63;
 $blue: #3F51B5;
 $grey: #EAE8E9;
 $grey2: #f3f3f3;
 $white: #FFF;
+
 /*--------------------
 GENERAL
 --------------------*/
+
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
+
 html {
-  box-sizing: border-box;
-  height: 100%;
-  overflow: hidden;
+    box-sizing: border-box;
+    height: 100%;
+    overflow: hidden;
 }
+
 body {
-  background: #f2f2f2;
-  font-family: 'Roboto', verdana, sans-serif;
-  height: 100%;
+    background: #f2f2f2;
+    font-family: 'Roboto', verdana, sans-serif;
+    height: 100%;
 }
+
 h1 {
-  font-size: 1.5em;
-  font-weight: 100;
+    font-size: 1.5em;
+    font-weight: 100;
 }
+
 #cardForm {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 /*--------------------
 PANEL FORM
 --------------------*/
+
 .panel {
-  background: $white;
-  width: 80%;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
+    background: $white;
+    width: 80%;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
 }
+
 .panel__header {
-  background: $blue;
-  color: $white;
+    background: $blue;
+    color: $white;
 }
+
 .panel__header,
 .panel__footer {
-  padding: 1em 2em;
+    padding: 1em 2em;
 }
+
 .panel__footer {
-  background: $grey2;
+    background: $grey2;
 }
+
 .panel__content {
-  padding: 1em 2em;
-  overflow: hidden;
+    padding: 1em 2em;
+    overflow: hidden;
 }
+
 .textfield--float-label {
-  padding-right: 5px;
+    padding-right: 5px;
 }
+
 .hosted-field--label {
-  transform: translateY(0.4em);
-  font-size: 1.125em;
-  line-height: 32px;
-  transition: all .15s ease-out;
-  display: block;
-  width: 100%;
-  font-weight: 400;
-  overflow: hidden;
-  margin-bottom: 0.5em;
-  &.label-float {
-    text-overflow: ellipsis;
-    color: #2196F3;
-    transition: all .15s ease-out
-  }
-  &.filled {
-    @extend .label-float;
-    color: rgba(0, 0, 0, .54);
-  }
-  &.invalid {
-    @extend .label-float;
-    color: #F44336;
-  }
+    transform: translateY(0.4em);
+    font-size: 1.125em;
+    line-height: 32px;
+    transition: all .15s ease-out;
+    display: block;
+    width: 100%;
+    font-weight: 400;
+    overflow: hidden;
+    margin-bottom: 0.5em;
+    &.label-float {
+        text-overflow: ellipsis;
+        color: #2196F3;
+        transition: all .15s ease-out
+    }
+    &.filled {
+        @extend .label-float;
+        color: rgba(0, 0, 0, .54);
+    }
+    &.invalid {
+        @extend .label-float;
+        color: #F44336;
+    }
 }
+
 span.icon {
-  position: relative;
-  top: 0.2em;
-  margin-right: 0.2em;
+    position: relative;
+    top: 0.2em;
+    margin-right: 0.2em;
 }
+
 svg {
-  fill: #333;
+    fill: #333;
 }
+
 .hosted-field {
-  height: 32px;
-  margin-bottom: 1em;
-  display: block;
-  background-color: transparent;
-  color: rgba(0, 0, 0, .87);
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .26);
-  outline: 0;
-  width: 100%;
-  font-size: 16px;
-  padding: 0;
-  box-shadow: none;
-  border-radius: 0;
-  position: relative;
+    height: 32px;
+    margin-bottom: 1em;
+    display: block;
+    background-color: transparent;
+    color: rgba(0, 0, 0, .87);
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .26);
+    outline: 0;
+    width: 100%;
+    font-size: 16px;
+    padding: 0;
+    box-shadow: none;
+    border-radius: 0;
+    position: relative;
 }
+
 .pay-button {
-  background: #E91E63;
-  color: #fff;
-  margin: 0 auto;
-  border: 0;
-  border-radius: 3px;
-  padding: 1em 3em;
-  font-size: 1em;
-  text-transform: uppercase;
-  box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .2);
+    background: #E91E63;
+    color: #fff;
+    margin: 0 auto;
+    border: 0;
+    border-radius: 3px;
+    padding: 1em 3em;
+    font-size: 1em;
+    text-transform: uppercase;
+    box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .2);
 }
+
+
 /*--------------------
 BT HOSTED FIELDS SPECIFIC
 --------------------*/
+
 .braintree-hosted-fields-focused {
-  border-bottom: 2px solid $blue;
-  transition: all 200ms ease;
+    border-bottom: 2px solid $blue;
+    transition: all 200ms ease;
 }
+
 .braintree-hosted-fields-invalid {
-  border-bottom: 2px solid $red;
-  transition: all 200ms ease;
+    border-bottom: 2px solid $red;
+    transition: all 200ms ease;
 }
-.name-custom-input{width: 100%;
+
+.name-custom-input {
+    width: 100%;
     border: 0;
     border-bottom: 1px solid #ccc;
     padding: 8px 0px;
-    outline: 0;color:rgba(0, 0, 0, 0.57)}
-.name-custom-input:focus{border-bottom: 2px solid $blue;}
-.custom-name{height:76px;}
+    outline: 0;
+    color: rgba(0, 0, 0, 0.57)
+}
+
+.name-custom-input:focus {
+    border-bottom: 2px solid $blue;
+}
+
+.custom-name {
+    height: 76px;
+}
+
+
 /*---------------------
 Media Queries
 ----------------------*/
+
 @media (max-width: 600px) {
-  html {
-    overflow: auto;
-  }
-  #cardForm {
-    height: auto;
-    margin: 2em;
-    font-size: 13px;
-  }
-  .panel {
-    width: 100%;
-  }
-  .textfield--float-label {
-    width: 100%;
-    float: none;
-    display: inline-block;
-  }
-  .pay-button {
-    width: 100%;
-  }
+    html {
+        overflow: auto;
+    }
+    #cardForm {
+        height: auto;
+        margin: 2em;
+        font-size: 13px;
+    }
+    .panel {
+        width: 100%;
+    }
+    .textfield--float-label {
+        width: 100%;
+        float: none;
+        display: inline-block;
+    }
+    .pay-button {
+        width: 100%;
+    }
 }
