--- a/src/app/components/store/checkout/checkout.component.scss
+++ b/src/app/components/store/checkout/checkout.component.scss
@@ -491,6 +491,14 @@ svg {
   text-transform: uppercase;
   box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .2);
 }
+
+.cardvalidateerror {
+    /* display: none; */
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
 /*--------------------
 BT HOSTED FIELDS SPECIFIC
 --------------------*/
