--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -77,7 +77,7 @@
               <div *ngIf="submitted && f.dateOfBirth.errors" class="invalid-feedback">
                 <div *ngIf="f.dateOfBirth.errors.required">Birthday is required</div>
               </div>
-              <div *ngIf="checkage" class="dateofbirth-invalid-feed-back">You have less than 14 years old!</div>
+              <div *ngIf="checkage" class="dateofbirth-invalid-feed-back">Must be 14 years or older to create an account</div>
             </div>
             <div class="form-group mb-3">
               <re-captcha id="recaptcha" name="recaptcha" required
