--- a/src/app/components/store/search_product/searchproduct/searchproduct.component.html
+++ b/src/app/components/store/search_product/searchproduct/searchproduct.component.html
@@ -19,7 +19,7 @@
   </div>
 </section>
 
-<section class="products">
+<section class="products search-results">
   <div class="container">
     <div class="row mt-2 prod-wrapp">
       <div *ngIf="shopProductModels.length == 0; then thenBlock else elseBlock"> </div>
