--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -9,11 +9,10 @@
       </button>
             <div id="main-menu" class="show-mob">
                 <ul class="right-menu ">
-                    <li><a (click)="showSearchbar()"><i class="fa fa-search"></i></a></li>
+                    <li><a (click)="searchProduct()"><i class="fa fa-search"></i></a></li>
 
                     <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span
                 *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
-
 
                 </ul>
             </div>
